--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  padding: 40px;
-  width: 100vh;
+  padding: 0;
+  width: 100%;
   height: 100vh;
+  margin: 0;
 }
