--- a/style.css
+++ b/style.css
@@ -9,6 +9,12 @@ body {
   }
 }
 
+main {
+  width: 100%; 
+  height: 100vh;
+  display: flex; 
+}
+
 .container {
   display: flex;
   justify-content: center;
@@ -17,4 +23,17 @@ body {
   width: 100%;
   height: 100vh;
   margin: 0;
+}
+
+.barra-lateral {
+  width: 70px; 
+  background-color: #6A67CE; 
+  height: 100%; 
+  display: flex;
+  flex-direction: column; 
+  align-items: center; 
+  padding: 20px 0; 
+  box-sizing: border-box; 
+  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.15);
+  position: relative; 
 }
