--- a/style.css
+++ b/style.css
@@ -102,3 +102,16 @@ main {
   background-color: transparent; 
  
 }
+
+.barramento {
+  width: 100%; 
+  background:linear-gradient(145deg, white 60%, #5a5fef 40%); 
+  height: 100%; 
+  display: flex;
+  flex-direction: row; 
+  align-items: center; 
+  padding: 31px 0px; 
+  box-sizing: border-box; 
+  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.15);
+  position: relative; 
+}
