--- a/style.css
+++ b/style.css
@@ -182,9 +182,14 @@ main {
 /* aqui2 */
 
 .chat-container {
+  position: absolute;
+  top:  50px;      /* abaixo da barra de busca/perfil */
+  left: 70px;      /* ao lado da sidebar */
+  right: 0;
+  bottom: 0;
+  
   display: flex;
   flex-direction: column;
-  height: 100vh;
 }
 
 :root {
